--- a/main.html
+++ b/main.html
@@ -10,7 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<p>What is the capital of India?</p>
+	<input name = "choose" type="radio">New Delhi</input>
+	<input name = "choose" type="radio">Mumbai</input>
+	<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
+		New Delhi is the capital of India and an administrative district of NCT Delhi.
 </body>
 
 </html>
